update cor configs